# wasmline

./: .gitignore  CMakeLists.txt  README.md  WasmtimeCore.cpp  WasmtimeCore.h  WasmtimeSample.cpp
script/: build.sh  configure.sh  env.sh  init.sh  run.sh
wasmtime-cpp/include/: FileUtils.h  JniUtils.h  WasmCommon.h  WasmConfig.h  WasmExecutor.h  WasmLog.h  WasmManager.h  WasmModule.h  WasmSession.h  WasmTimer.h
wasmtime-cpp/src/: FileUtils.cpp  JniUtils.cpp  WasmConfig.cpp  WasmExecutor.cpp  WasmManager.cpp  WasmModule.cpp  WasmSession.cpp
wasmtime-kotlin/: build.gradle.kts  gradle.properties  settings.gradle.kts  wasmline.jks
wasmtime-kotlin/gradle/: libs.versions.toml
wasmtime-kotlin/gradle/wrapper/: gradle-wrapper.properties
wasmtime-kotlin/wasmtime-app/android/: build.gradle.kts
wasmtime-kotlin/wasmtime-app/android/release/: output-metadata.json
wasmtime-kotlin/wasmtime-app/android/release/baselineProfiles/0/: android-release.dm
wasmtime-kotlin/wasmtime-app/android/release/baselineProfiles/1/: android-release.dm
wasmtime-kotlin/wasmtime-app/android/src/androidMain/: AndroidManifest.xml
wasmtime-kotlin/wasmtime-app/android/src/androidMain/assets/: add.wasm  add2.wasm  add4.wasm  main.cwasm  plugin.wasm
wasmtime-kotlin/wasmtime-app/android/src/androidMain/cpp/: CMakeLists.txt  WasmtimeCore.cpp  WasmtimeJni.cpp  WasmtimeSample.cpp  mrakdown.md
wasmtime-kotlin/wasmtime-app/android/src/androidMain/cpp/script/: build.sh  configure.sh
wasmtime-kotlin/wasmtime-app/android/src/androidMain/kotlin/crow/wasmtime/: WasmModule.kt  WasmRuntime.kt
wasmtime-kotlin/wasmtime-app/android/src/androidMain/kotlin/crow/wasmtime/wasmline/: MainActivity.kt  TipsExt.kt  WasmEngine.kt
wasmtime-kotlin/wasmtime-app/android/src/androidMain/res/layout/: activity_main.xml
wasmtime-kotlin/wasmtime-app/android/src/androidMain/res/values/: strings.xml  themes.xml
wasmtime-kotlin/wasmtime-app/android/src/androidMain/res/values-night/: themes.xml
wasmtime-kotlin/wasmtime-app/application/: build.gradle.kts
wasmtime-kotlin/wasmtime-build-logic/: settings.gradle.kts
wasmtime-kotlin/wasmtime-build-logic/app/: build.gradle.kts
wasmtime-kotlin/wasmtime-build-logic/app/src/main/kotlin/extensions/: AndroidExtension.kt  ApplicationExtension.kt
wasmtime-kotlin/wasmtime-build-logic/app/src/main/kotlin/gradle/base/: app.base.android.compose.gradle.kts  app.base.android.gradle.kts  app.base.application.gradle.kts  app.base.compose.gradle.kts  app.base.library.gradle.kts  app.base.multiplatform.gradle.kts  app.base.multiplatform.js.gradle.kts
wasmtime-kotlin/wasmtime-build-logic/app/src/main/kotlin/gradle/function/: app.function.android.compose.gradle.kts
wasmtime-kotlin/wasmtime-build-logic/app/src/main/kotlin/utils/: Dependencies.kt
wasmtime-kotlin/wasmtime-build-logic/base/: build.gradle.kts
wasmtime-kotlin/wasmtime-build-logic/base/src/main/kotlin/: Config.kt  KotlinMultiplatformExt.kt
wasmtime-kotlin/wasmtime-core/core/: build.gradle.kts
wasmtime-kotlin/wasmtime-core/core/src/wasmWasiMain/kotlin/crow/wasmtime/wasmline/: Core.kt
wasmtime-kotlin/wasmtime-core/plugin/: build.gradle.kts
wasmtime-kotlin/wasmtime-core/plugin/src/wasmWasiMain/kotlin/crow/wasmtime/wasmline/: Plugin.kt
wasmtime-kotlin/wasmtime-library/android/: build.gradle.kts
